apps/istio-ingress/overlays/ops/gateway-private.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway-private
  namespace: istio-ingress
  labels:
    app_label: istio-ingressgateway-private
    app.kubernetes.io/version: 1.20.0
    istio: ingressgateway-private
spec:
  selector:
    istio: istio-ingressgateway-private
  servers:
    - hosts:
        - "*.dev.devxp-tech.io"
        - "*.dev.diegoluisi.eti.br"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - port:
        name: https-diegoluisi
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: diegoluisi.eti.br # This should match the Certificate secretName
      hosts:
        - "*.dev.diegoluisi.eti.br" # This should match a DNS name in the Certificate
    - port:
        name: https-devxp
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: devxp-tech.io # This should match the Certificate secretName
      hosts:
        - "*.dev.devxp-tech.io"
