apps/istio-ingress/overlays/ops/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app_label: istio-ingressgateway
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - hosts:
    - '*.diegoluisi.eti.br'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-certs # This should match the Certificate secretName
    hosts:
    - '*.diegoluisi.eti.br' # This should match a DNS name in the Certificate
