apps/istio-ingress/overlays/ops/private.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: private
  namespace: istio-system
  labels:
    app: private
    app.kubernetes.io/version: 1.16.2
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.diegoluisi.eti.br"
        - "*.devxp-tech.io"
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - port:
        name: https-diegoluisi
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: diegoluisi.eti.br # This should match the Certificate secretName
      hosts:
        - "*.diegoluisi.eti.br" # This should match a DNS name in the Certificate
    - port:
        name: https-devxp
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: devxp-tech.io # This should match the Certificate secretName
      hosts:
        - "*.devxp-tech.io" # This should match a DNS name in the Certificate
