apps/istio-ingress/overlays/ops/result.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-name: vex-dev-usea1-eks
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-type: external
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/version: 1.18.1
    app_label: istio-ingressgateway
    helm.sh/chart: gateway-1.18.1
    istio: ingressgateway
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  externalTrafficPolicy: Local
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
    targetPort: 15021
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/version: 1.18.1
    app_label: istio-ingressgateway
    helm.sh/chart: gateway-1.18.1
    istio: ingressgateway
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        proxy.istio.io/config: '{"discoveryAddress" : "istiod.istio-system.svc:15012"
          }'
        sidecar.istio.io/inject: "true"
      labels:
        app: istio-ingressgateway
        app_label: istio-ingressgateway
        istio: ingressgateway
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - env: null
        image: auto
        name: istio-proxy
        ports:
        - containerPort: 15090
          name: http-envoy-prom
          protocol: TCP
        resources:
          limits:
            cpu: 2000m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1337
          runAsNonRoot: false
          runAsUser: 0
      securityContext: null
      serviceAccountName: istio-ingressgateway
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/version: 1.20.0
    app_label: istio-ingressgateway
  name: istio-ingressgateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*.diegoluisi.eti.br'
    - '*.devxp-tech.io'
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - '*.diegoluisi.eti.br'
    port:
      name: https-diegoluisi
      number: 443
      protocol: HTTPS
    tls:
      credentialName: diegoluisi.eti.br
      mode: SIMPLE
  - hosts:
    - '*.devxp-tech.io'
    port:
      name: https-devxp
      number: 443
      protocol: HTTPS
    tls:
      credentialName: devxp-tech.io
      mode: SIMPLE
