apps/istio-ingress/overlays/ops/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: teste-loki-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - teste-loki.devxp-tech.io
            # ports: ["443"]
      when:
        - key: request.headers[x-envoy-external-address]
          values:
            - "94.62.74.120" # Diego
            - "177.76.170.30" # Gritzko
            - "179.191.119.178" #DiOculos


    # - from:
    #     - source:
    #         namespaces: ["dex", "monitoring", "kiali-operator", "teste-loki"]
    #   to:
    #     - operation:
    #         methods: ["GET", "POST", "OPTIONS", "DELETE", "PATCH"]
